<resources>
    <string name="app_name">aaSmartShopPlus</string>
    // TODO apply normal name


    <string name="title_product_list">Product List</string>
    <string name="title_add_store">Add store</string>
    <string name="title_add_product">Add product</string>


    <string name="dialog_title_erase_store">Attention</string>
    <string name="dialog_message_erase_store">Deleting a store will also erase all the products within. Proceed?</string>
    <string name="dialog_title_erase_all_products">Confirm</string>
    <string name="dialog_message_erase_all_products">Delete all products?</string>


    <string name="toast_store_successfully_added">Store added</string>
    <string name="toast_store_successfully_erased">Store erased</string>
    <string name="toast_all_products_successfully_erased">All products erased</string>
    <string name="toast_product_successfully_added">Product added</string>
    <string name="toast_product_successfully_erased">Product erased</string>
    <string name="toast_changes_applied">Changes applied</string>

    <string name="lbl_quality">Quality :</string>


    <string name="desc_store_name">Store name</string>
    <string name="hint_store_name">Insert store name</string>
    <string name="desc_store_image">Image</string>

    <string name="desc_product_name">Product name</string>
    <string name="hint_product_name">Insert product name</string>

    <string name="desc_product_quantity">Quantity</string>
    <string name="hint_product_quantity">Insert product quantity</string>

    <string name="desc_product_quantity_type">Quantity type</string>
    <string name="hint_product_quantity_type">ml, kg, cm², IU, croissants, etc.</string>

    <string name="desc_product_price">Price</string>
    <string name="hint_product_price">Insert price</string>

    <string name="checkbox_discount">Discount item</string>

    <string name="desc_product_quality">Quality</string>

    <string name="desc_product_image">Product image</string>

    <string name="mnu_add">Add</string>
    <string name="mnu_edit">Edit</string>
    <string name="mnu_delete">Delete</string>
    <string name="mnu_apply">Apply</string>
    <string name="mnu_remove_all_products">Remove all products</string>

    <string name="mnu_sort_name_ascending">Sort by name ascendingly</string>
    <string name="mnu_sort_name_descending">Sort by name descendingly</string>
    <string name="mnu_sort_price_ascending">Sort by price ascendingly</string>
    <string name="mnu_sort_price_descending">Sort by price descendingly</string>
    <string name="mnu_contact_developer">Contact developer</string>



    <string name="err_field_cannot_be_blank">This field cannot be blank</string>


    <string name="intent_gallery_picker">Select image</string>

    <string name="intent_email_picker">Send e-mail</string>
    <string name="intent_email_address">catadeluxxxe@gmail.com</string>
    <string name="intent_email_subject">SmartShopPlus</string>
    <string name="intent_email_body">SmartShopPlus is awesome!</string>
    <string name="intent_email_no_clients_installed">There are no e-mail clients installed</string>


</resources>
