<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnu_ajouter"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="75"
        android:title="@string/mnu_add"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnu_modifier"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="75"
        android:title="@string/mnu_edit"
        app:showAsAction="ifRoom|withText"></item>
    <item
        android:id="@+id/mnu_supprimer"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:orderInCategory="75"
        android:title="@string/mnu_delete"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/mnu_supprimer_tous_produits"
        android:icon="@drawable/ic_delete_sweep_white_48dp"
        android:orderInCategory="75"
        android:title="@string/mnu_remove_all_products"
        app:showAsAction="never" />
</menu>