<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ajouter_produit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.qc.bdeb.p55.smartshopplus.vue.AjouterProduitActivity">

    <TextView
        android:id="@+id/activity_ajouter_produit_tvw_desc_nom_produit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/desc_product_name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_aouter_produit_edt_nom_produit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_ajouter_produit_tvw_desc_nom_produit"
        android:ems="10"
        android:hint="@string/hint_product_name"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/activity_ajouter_produit_tvw_desc_quantite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_aouter_produit_edt_nom_produit"
        android:text="@string/desc_product_quantity"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_aouter_produit_edt_quantite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_ajouter_produit_tvw_desc_quantite"
        android:ems="10"
        android:hint="@string/hint_product_quantity"
        android:inputType="numberDecimal"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/activity_ajouter_produit_tvw_desc_type_quantite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_aouter_produit_edt_quantite"
        android:maxLength="15"
        android:text="@string/desc_product_quantity_type"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_aouter_produit_edt_type_quantite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_ajouter_produit_tvw_desc_type_quantite"
        android:ems="10"
        android:hint="@string/hint_product_quantity_type"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/activity_ajouter_produit_tvw_desc_prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_aouter_produit_edt_type_quantite"
        android:text="@string/desc_product_price"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_aouter_produit_edt_prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_ajouter_produit_tvw_desc_prix"
        android:ems="10"
        android:hint="@string/hint_product_price"
        android:inputType="numberDecimal"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/activity_ajouter_produit_ibtn_image_produit"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_below="@+id/activity_ajouter_produit_tvw_desc_image"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/activity_ajouter_produit_tvw_desc_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity_ajouter_produit_rbar_qualite"
        android:layout_alignStart="@+id/activity_ajouter_produit_rbar_qualite"
        android:layout_below="@+id/activity_ajouter_produit_rbar_qualite"
        android:text="@string/desc_product_image"
        android:textSize="25sp" />

    <RatingBar
        android:id="@+id/activity_ajouter_produit_rbar_qualite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.1"
        android:layout_below="@+id/activity_aouter_produit_tvw_desc_qualite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/activity_aouter_produit_tvw_desc_qualite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_quality"
        android:textSize="25sp"
        android:layout_below="@+id/activity_aouter_produit_chkbox_en_rabais"
        android:layout_alignLeft="@+id/activity_aouter_produit_chkbox_en_rabais"
        android:layout_alignStart="@+id/activity_aouter_produit_chkbox_en_rabais" />

    <CheckBox
        android:text="@string/checkbox_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_aouter_produit_chkbox_en_rabais"
        android:layout_below="@+id/activity_aouter_produit_edt_prix"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp" />
</RelativeLayout>
</ScrollView>