<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.qc.bdeb.p55.smartshopplus.vue.AjouterMagasinActivity">

    <TextView
        android:id="@+id/activity_ajouter_magasin_tvw_desc_nom_magasin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/desc_store_name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/activity_ajouter_magasin_edt_nom_magasin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_ajouter_magasin_tvw_desc_nom_magasin"
        android:hint="@string/hint_store_name"
        android:lines="1"
        android:longClickable="false"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="25sp" />

    <Space
        android:id="@+id/space_edtnom_tvwimage"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_ajouter_magasin_edt_nom_magasin" />

    <TextView
        android:id="@+id/activity_ajouter_magasin_tvw_desc_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space_edtnom_tvwimage"
        android:text="@string/desc_store_image"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/activity_ajouter_magasin_ibtn_image_magasin"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_below="@+id/activity_ajouter_magasin_tvw_desc_image"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
